syntax = "proto3";

service Vote {
    rpc Create (CreateRequest) returns (CreateResponse) {} 
    rpc Vote (VoteRequest) returns (VoteResponse) {}
    rpc Delete (DeleteRequest) returns (DeleteResponse) {}
    rpc Close (CloseRequest) returns (CloseResponse) {}
    rpc Get (GetRequest) returns (GetResponse) {}
}

message CreateRequest {
    string title = 1;
    string description = 2;
    string owner = 3;
}

message CreateResponse {
    string id = 1;
    string title = 2;
    string description = 3;
    string owner = 4;
    string created = 5;
}

message VoteRequest {
    string id = 1;
    string userid = 2;
    bool agree = 3;
}

message VoteResponse {
    bool status = 1; 
}

message DeleteRequest {
    string id = 1;
    string userid = 2;
}

message DeleteResponse {
    bool status = 1; 
}

message CloseRequest {
    string id = 1;
    string userid = 2;
}

message CloseResponse {
    bool status = 1; 
}

message Agenda {
    string id = 1;
    string title = 2;
    string owner = 3;
    string description = 4;
    string created = 5;
    string closed = 6;
    string your = 7;
    uint64 agree = 8;
    uint64 disagree = 9;
}

message GetRequest {
    string userid = 1;
} 

message GetResponse {
    repeated Agenda agendas = 1;
}